poll-page -> fix gaps appearing when scaling in the browser

--- a/src/app/pages/poll-page/poll-page.component.scss
+++ b/src/app/pages/poll-page/poll-page.component.scss
@@ -42,10 +42,16 @@
 }
 
 .scene-image {
-	width: 286px;
+	/* width: 286px;
 	height: 286px;
 	position: relative;
 	top: -286px;
+	border-radius: 0px 0px 4px 4px;
+	display: block; */
+	width: 100%;
+	height: calc(100% - 49px);
+	position: relative;
+	top: calc(-100% + 49px);
 	border-radius: 0px 0px 4px 4px;
 	display: block;
 }
@@ -65,7 +71,7 @@
 
 .audio-drop-zone {
 	width: 100%;
-	height: 336px;
+	height: 100%;
 	background-color: #d9dbde;
 	border-radius: 4px;
 }
